# talent-heron

./: .gitignore  ARCHON_TALENT_FETCHING.md  index.html  package-lock.json  package.json  tailwind.config.js  talent-heron.sh
.github/workflows/: release.yml
docs/plans/: 2025-01-22-ocean-theme-color-system-design.md  2025-11-22-github-actions-build-design.md
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: archon.rs  config.rs  lib.rs  lua_talent.rs  main.rs  orchestrator.rs  updater.rs  warcraft_logs.rs  wow.rs  wow_scanner.rs
src/components/: ActiveCharactersTab.vue  CharacterLibrary.vue  ContentSettingsTab.vue  GameSettingsTab.vue  SelectedCharactersList.vue  StatusMessages.vue  TabNavigation.vue
