[package]
name = "talent-heron"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "talent_heron_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client with async support
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# HTML parsing
scraper = "0.20"

# Date/time handling for Wednesday detection
chrono = "0.4"

# Lua parsing and formatting
full_moon = { version = "0.19", features = ["roblox"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

